--- a/django_project/accounts/templates/login.html
+++ b/django_project/accounts/templates/login.html
@@ -11,13 +11,10 @@
 </head>
 <body>
     <div class="parent-container">
-    <div class="form-container" style="position: fixed;display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; background-color: #343541;" >
-        <div class="container" style="display: flex;flex-direction:column;justify-content:center;width: auto;background-color: #202123; border-radius: 30px;padding: 60px; color: white;">
-            <h1 style="margin:auto; margin-bottom: 30px;">Login</h1><!--and Inspire Yourself-->
-            <form action="{% url 'accounts:login' %}" method="post">
+    <div class="form-container">
+        <div class="container-background">
+            <h1>Login</h1><!--and Inspire Yourself-->
+            <form action="{% url 'accounts:login' %}" method="post" class="form__">
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="{{ form.username.id_for_label }}">Username:</label>
@@ -28,20 +25,17 @@
                     {{ form.password }}
                 </div>
                 <input type="hidden" name="next" value="{{ request.GET.next }}">
-                <div class="form-group" style="display: flex;justify-content: center;">
+                <div class="form-group">
                     <input class="btn btn-success" type="submit" value="Submit">
                 </div>
-                <!-- <div class="form-group signup">
-                    <a id="signup" href="{% url 'accounts:signup' %}">If you are new here, sign up here!</a>
-                </div> -->
-                <div class="or-container" style="align-items: center;color: #ccc;display: flex;margin: 25px 0;">
-                    <div class="line-separator" style="background-color: #ccc;flex-grow: 5;height: 1px;">
+                <div class="or-container">
+                    <div class="line-separator">
                     </div> 
-                    <div class="or-label" style="flex-grow: 1;margin: 0 15px;text-align: center;">or</div>
-                    <div class="line-separator"  style="background-color: #ccc;flex-grow: 5;height: 1px;"></div></div>
+                    <div class="or-label">or</div>
+                    <div class="line-separator"></div></div>
                     <div class="row">
                         <div class="col-md-12">
-                          <a class="btn btn-lg btn-google btn-block text-uppercase btn-outline" style="color: #545454;background-color: #ffffff;box-shadow: 0 1px 2px 1px #ddd;" href="https://www.google.com/"><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using Google</a>
+                          <a class="btn btn-lg btn-google btn-block text-uppercase btn-outline"  href="https://www.google.com/"><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using Google</a>
                         </div>
                     </div>
                     <br>
@@ -51,7 +45,12 @@
                 <div class="error-message">
                   <p>{{ error_message }}</p>
                 </div>
-              {% endif %}
+                {% endif %}
+                <!-- {% if request.path == '/accounts/login/' %}
+                <div class="chat-without-login">
+                    <p style="color:red;">Login to access InspireMeGPT site</p>
+                </div>
+                {% endif %} -->
             </form>
         </div>
     </div>
