--- a/django_project/accounts/static/css/style.css
+++ b/django_project/accounts/static/css/style.css
@@ -1,28 +1,39 @@
+:root{
+    --primary-color-dark: #9c1824;
+    --primary-color-dark0:#b42434;
+    --primary-color-dark1:#cd2f44;
+}
 h1 {margin:auto; margin-bottom: 30px;}
-.form-container {
-    position: fixed;display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; background-color: #343541;
-}
-.container{
-    display: flex;
-    flex-direction:column;
-    justify-content:center;
-    width: auto;
-    background-color: #202123; 
-    border-radius: 30px;
-    padding: 60px; 
-    color: white;
-}
 .parent-container{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 100vh; background-color: #343541;
+    height: 100vh; background-color: var( --primary-color-dark0);
 }
-.form-group{ display: flex;justify-content: center;}
+.form-container {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+    background-color: var( --primary-color-dark0);
+}
+.container-background{
+    display: flex;
+    flex-direction:column;
+    justify-content:center;
+    width: auto;
+    background-color: var( --primary-color-dark); 
+    border-radius: 30px;
+    padding: 60px; 
+    color: white;
+}
+.form-group-b{ 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 .or-container{
     align-items: center;
     color: #ccc;
@@ -36,3 +47,7 @@ h1 {margin:auto; margin-bottom: 30px;}
 }
 .line-separator{background-color: #ccc;flex-grow: 5;height: 1px;}
 .btn-outline{color: #545454;background-color: #ffffff;box-shadow: 0 1px 2px 1px #ddd;}
+
+.form-control{
+    width: 300px;
+}
