--- a/django_project/accounts/templates/login.html
+++ b/django_project/accounts/templates/login.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/5da172642b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
+    <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
     <title>InspireMeGPT - Login</title>
 </head>
 <body>
@@ -17,46 +20,29 @@
             <form action="{% url 'accounts:login' %}" method="post" class="form__">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="{{ form.username.id_for_label }}">Username:</label>
+                    <label>Username:</label>
                     {{ form.username }}
                 </div>
                 <div class="form-group">
-                    <label for="{{ form.password.id_for_label }}">Password:</label>
+                    <label>Password:</label>
+                    <br/>
                     {{ form.password }}
                 </div>
                 <input type="hidden" name="next" value="{{ request.GET.next }}">
-                <div class="form-group">
+                <div class="form-group-b">
                     <input class="btn btn-success" type="submit" value="Submit">
                 </div>
                 <div class="or-container">
                     <div class="line-separator">
                     </div> 
-                    <div class="or-label">or</div>
+                    <div class="or-label"><i class="fa-regular fa-star"></i></div>
                     <div class="line-separator"></div></div>
-                    <div class="row">
                         <div class="col-md-12">
-                          <a class="btn btn-lg btn-google btn-block text-uppercase btn-outline"  href="https://www.google.com/"><img src="https://img.icons8.com/color/16/000000/google-logo.png"> Login Using Google</a>
+                          <p class="text-inverse text-center">New on InspireMeGPT?<a href="{% url 'accounts:signup' %}" data-abc="true"> Signup</a></p>
                         </div>
-                    </div>
-                    <br>
-    
-                <p class="text-inverse text-center">New on InspireMeGPT?<a href="{% url 'accounts:signup' %}" data-abc="true"> Signup</a></p>
-                {% if form_submitted and error_message %}
-                <div class="error-message">
-                  <p>{{ error_message }}</p>
-                </div>
-                {% endif %}
-                <!-- {% if request.path == '/accounts/login/' %}
-                <div class="chat-without-login">
-                    <p style="color:red;">Login to access InspireMeGPT site</p>
-                </div>
-                {% endif %} -->
             </form>
         </div>
     </div>
-    <!-- <div class="additional-text" style="margin-left: 30px; text-align: center;">
-        <p>To be honest with you, anything you ask, I'll give you an inspirational quote. Look on the bright side, you might not learn about quantum computing, but you'll feel inspired enough to do it yourself.</p>
-    </div> -->
 </div>
 </body>
 </html>
