--- a/django_project/accounts/templates/signup.html
+++ b/django_project/accounts/templates/signup.html
@@ -1,35 +1,27 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/5da172642b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
-    <title>InspireMeGPT - Signup</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/5da172642b.js" crossorigin="anonymous"></script>
+        <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/signup.css' %}">
+        <title>InspireMeGPT - Signup</title>
 </head>
-<style>form .errorlist {
-    color: red;
-    list-style: none;
-    padding: 0;
-  }</style>
 <body>
-    <div class="form-container-signup" style="display: flex;justify-content: center;align-items: center;background-color: #343541;" >
-        <div class="container-signup" style="display: flex;flex-direction:column;justify-content:center;width: auto;background-color: #202123; border-radius: 30px;padding: 20px; color: white;">
-            <h1 style="margin:auto; margin-bottom: 30px;">Signup</h1><!--and Inspire Yourself-->
-            <form action="{% url 'accounts:signup' %}" method="post" style="display:flex;flex-direction: column;gap: 20px;">
-                <!-- {% csrf_token %} -->
-                <!-- <form method="post"> -->
+    <div class="form-container-signup">
+        <div class="container-signup">
+            <h1>Signup</h1>
+            <form action="{% url 'accounts:signup' %}" class="signup-form"method="post">
                     {% csrf_token %}
                     {{ form.as_div }}
-                <button type="submit">Sign Up</button>
-                <!-- </form> -->
-                <br>
+                    <div class="form-group-b">
+                        <input class="btn btn-success" type="submit" value="Submit">
+                    </div>
                 <p class="text-inverse text-center">Already have an account? <a href="{% url 'accounts:login' %}" data-abc="true">Login</a></p>
-                
             </form>
         </div>
     </div>
